--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="col-6">
             <div class="main">
                 <div class="logo">
-                   <img src="img/Logo-Test.png" alt="logo" width="150" height="60">
+                   <img src="Logo-Test.png" alt="logo" width="150" height="60">
                 </div>
                 <div class="text">
                     <h1>The Easiest Way To Create a Squeeze Page With <br>Adobe XD</h1>
